[gd_scene load_steps=9 format=3 uid="uid://oopy3lps33rp"]

[ext_resource type="Script" uid="uid://psmdfgnorvrw" path="res://scripts/pong.gd" id="1_nth8n"]
[ext_resource type="PackedScene" uid="uid://bmed41fkbopnt" path="res://scenes/hud.tscn" id="2_7aeas"]
[ext_resource type="PackedScene" uid="uid://3bj65cj3w5ps" path="res://scenes/paddel.tscn" id="2_5420t"]
[ext_resource type="PackedScene" uid="uid://bkgsgplmdrdk4" path="res://scenes/ball.tscn" id="3_ik6sa"]
[ext_resource type="PackedScene" uid="uid://mncx6o0d7l20" path="res://scenes/wall.tscn" id="4_ploue"]
[ext_resource type="PackedScene" uid="uid://buom67aopybpw" path="res://scenes/score_detector.tscn" id="5_60vo6"]
[ext_resource type="AudioStream" uid="uid://cdroq7a3eog4a" path="res://assets/score.wav" id="6_1gkem"]

[sub_resource type="QuadMesh" id="QuadMesh_ftxu3"]

[node name="Pong" type="Node2D"]
script = ExtResource("1_nth8n")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("2_7aeas")]

[node name="StartDelay" type="Timer" parent="."]
one_shot = true

[node name="Environment" type="Node2D" parent="."]

[node name="Background" type="MeshInstance2D" parent="Environment"]
self_modulate = Color(0, 0, 0, 1)
z_index = -1
position = Vector2(640.22253, 359.62503)
scale = Vector2(1280, 720)
mesh = SubResource("QuadMesh_ftxu3")
metadata/_edit_lock_ = true

[node name="WallUp" parent="Environment" instance=ExtResource("4_ploue")]
position = Vector2(640, 0)

[node name="WallDown" parent="Environment" instance=ExtResource("4_ploue")]
position = Vector2(640, 720)

[node name="ScoreDetectorLeft" parent="Environment" instance=ExtResource("5_60vo6")]
position = Vector2(0, 360)
is_left = true

[node name="ScoreDetectorRight" parent="Environment" instance=ExtResource("5_60vo6")]
position = Vector2(1280, 360)

[node name="Ball" type="Node2D" parent="."]

[node name="Ball" parent="Ball" instance=ExtResource("3_ik6sa")]
position = Vector2(640, 360)

[node name="BallSound" type="AudioStreamPlayer2D" parent="Ball"]
stream = ExtResource("6_1gkem")

[node name="Paddels" type="Node2D" parent="."]

[node name="PaddelOne" parent="Paddels" instance=ExtResource("2_5420t")]
position = Vector2(50, 360)
is_player_one = true

[node name="PaddelTwo" parent="Paddels" instance=ExtResource("2_5420t")]
position = Vector2(1230, 360)
is_ai = true

[connection signal="ball_out" from="Environment/ScoreDetectorLeft" to="." method="_on_score_detector_left_ball_out"]
